ランディングページのデザイン

--- a/content/ja/_index.html
+++ b/content/ja/_index.html
@@ -3,8 +3,9 @@ title: "OneScope"
 linkTitle: "OneScope"
 ---
 
-{{< blocks/cover title="OneScope" image_anchor="top" height="full" >}}
+{{< blocks/cover image_anchor="top" height="full" >}}
 <div class="mx-auto">
+	<img src="/logo.png"/>
 	<p class="lead mt-5">実務経験を積める本気のエンジニアコミュニティ</p>
 	<p>この Web サイトは作成中です。</p>
 	{{< blocks/link-down color="info" >}}
@@ -34,4 +35,3 @@ OneScope は主に Discord と GitHub 上でコミュニケーションを行い
 {{% /blocks/feature %}}
 
 {{< /blocks/section >}}
-
