ブラウザの横幅が小さいときロゴ画像がはみ出さないようにする

--- a/content/ja/_index.html
+++ b/content/ja/_index.html
@@ -5,7 +5,7 @@ linkTitle: "OneScope"
 
 {{< blocks/cover image_anchor="top" height="full" >}}
 <div class="mx-auto">
-	<img src="/logo.png"/>
+	<img class="cover-logo" src="/logo.png"/>
 	<p class="lead mt-5">実務経験を積める本気のエンジニアコミュニティ</p>
 	<p>この Web サイトは作成中です。</p>
 	{{< blocks/link-down color="info" >}}
