--- a/content/ja/_index.html
+++ b/content/ja/_index.html
@@ -12,20 +12,19 @@ linkTitle: "OneScope"
 </div>
 {{< /blocks/cover >}}
 
-
 {{% blocks/lead color="primary" %}}
 OneScope は本気のエンジニアがひとつのスコープに集うコミュニティです。  
 {{% /blocks/lead %}}
 
-{{< blocks/section color="dark" >}}
-{{% blocks/feature icon="fa-people-group" title="本気のエンジニアが多数所属" %}}
+{{< blocks/section color="dark" type="row" >}}
+{{% blocks/feature icon="fa-people-group" title="本気のエンジニアが多数所属" url="about/members" %}}
 OneScope にはソフトウェア企業のエンジニアや、学生エンジニアが多数所属しています。
 最新技術に関する情報や、実務で必要となるソフトウェア設計の勘所など、実用レベルのリアルな情報交換が積極的に行われています。
 {{% /blocks/feature %}}
 
-{{% blocks/feature icon="fa-person-chalkboard" title="実務経験を積める" %}}
+{{% blocks/feature icon="fa-person-chalkboard" title="実務経験を積める" url="about/projects" %}}
 OneScope ではソフトウェア企業の実際の仕事の一部を請け負うことが可能です。
-仕事は OneScope 内でチームを組んで実施します。その際、ソフトウェア企業のエンジニアがメンターとしてサポートします。
+仕事は OneScope 内でチームを組んで実施します。ソフトウェア企業のエンジニアがメンターとしてサポートします。
 学校やプログラミングスクールでは体験する機会の少ない実務経験が可能です。
 {{% /blocks/feature %}}
 
