--- a/content/ja/_index.html
+++ b/content/ja/_index.html
@@ -12,25 +12,65 @@ linkTitle: "OneScope"
 </div>
 {{< /blocks/cover >}}
 
-{{% blocks/lead color="primary" %}}
+{{< blocks/lead color="primary" >}}
 OneScope は本気のエンジニアがひとつのスコープに集うコミュニティです。  
-{{% /blocks/lead %}}
+{{< /blocks/lead >}}
 
 {{< blocks/section color="dark" type="row" >}}
-{{% blocks/feature icon="fa-people-group" title="本気のエンジニアが多数所属" url="about/members" %}}
-OneScope にはソフトウェア企業のエンジニアや、学生エンジニアが多数所属しています。
-最新技術に関する情報や、実務で必要となるソフトウェア設計の勘所など、実用レベルのリアルな情報交換が積極的に行われています。
-{{% /blocks/feature %}}
+	{{< blocks/feature icon="fa-people-group" title="本気のエンジニアが多数所属" url="about/members" >}}
+	OneScope にはソフトウェア企業のエンジニアや、学生エンジニアが多数所属しています。
+	最新技術に関する情報や、実務で必要となるソフトウェア設計の勘所など、実用レベルのリアルな情報交換が積極的に行われています。
+	{{< /blocks/feature >}}
 
-{{% blocks/feature icon="fa-person-chalkboard" title="実務経験を積める" url="about/projects" %}}
-OneScope ではソフトウェア企業の実際の仕事の一部を請け負うことが可能です。
-仕事は OneScope 内でチームを組んで実施します。ソフトウェア企業のエンジニアがメンターとしてサポートします。
-学校やプログラミングスクールでは体験する機会の少ない実務経験が可能です。
-{{% /blocks/feature %}}
+	{{< blocks/feature icon="fa-person-chalkboard" title="実務経験を積める" url="about/projects" >}}
+	OneScope ではソフトウェア企業の実際の仕事の一部を請け負うことが可能です。
+	仕事は OneScope 内でチームを組んで実施します。ソフトウェア企業のエンジニアがメンターとしてサポートします。
+	学校やプログラミングスクールでは体験する機会の少ない実務経験が可能です。
+	{{< /blocks/feature >}}
 
-{{% blocks/feature icon="fa-house-laptop" title="リモートOK" url="https://discord.gg/Gt24ERbjRg" url_text="Discord サーバーに参加する" %}}
-OneScope は主に Discord と GitHub 上でコミュニケーションを行います。
-場所や時間帯によらず参加可能です。
-{{% /blocks/feature %}}
-
+	{{< blocks/feature icon="fa-house-laptop" title="リモートOK" url="https://discord.gg/Gt24ERbjRg" url_text="Discord サーバーに参加する" >}}
+	OneScope は主に Discord と GitHub 上でコミュニケーションを行います。
+	場所や時間帯によらず参加可能です。
+	{{< /blocks/feature >}}
 {{< /blocks/section >}}
+
+{{< blocks/section color="dark" >}}
+	<div class="lp-timelines">
+		<iframe 
+			src="https://discord.com/widget?id=1105365490429337655&theme=dark" 
+			width="320" 
+			height="480" 
+			allowtransparency="true" 
+			frameborder="0" 
+			sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
+		</iframe>
+
+		<section class="lp-twitter-timeline">
+			<header>
+				<label>Twitter</label>
+				<a href="https://twitter.com/onescooope" target="_blank">@onescooope</a>
+			</header>
+			<p>
+				<a
+					class="twitter-timeline"
+					data-lang="ja"
+					data-width="320"
+					data-height="480"
+					data-theme="dark"
+					data-chrome="noheader nofooter noborders transparent"
+					href="https://twitter.com/onescooope?ref_src=twsrc%5Etfw"
+				>
+					Tweets by onescooope
+				</a>
+				<script
+					async 
+					src="https://platform.twitter.com/widgets.js"
+					charset="utf-8"
+				>
+				</script>
+			</p>
+		</section>
+	</div>
+{{< /blocks/section >}}
+
+
