--- a/content/ja/_index.html
+++ b/content/ja/_index.html
@@ -16,25 +16,50 @@ linkTitle: "OneScope"
 OneScope は本気のエンジニアがひとつのスコープに集うコミュニティです。  
 {{< /blocks/lead >}}
 
-{{< blocks/section color="dark" type="row" >}}
-	{{< blocks/feature icon="fa-people-group" title="本気のエンジニアが多数所属" url="about/members" >}}
-	OneScope にはソフトウェア企業のエンジニアや、学生エンジニアが多数所属しています。
-	最新技術に関する情報や、実務で必要となるソフトウェア設計の勘所など、実用レベルのリアルな情報交換が積極的に行われています。
-	{{< /blocks/feature >}}
+{{< blocks/section color="info" >}}
+	<div class="lp-feature-card">
+		<img src="images/engineers.svg" />
+		<div>
+			<h4>本気のエンジニアが多数所属</h4>
+			<p>
+				OneScope にはソフトウェア企業のエンジニアや、学生エンジニアが多数所属しています。 <br />
+				最新技術に関する情報や、実務で必要となるソフトウェア設計の勘所など、実用レベルのリアルな情報交換が積極的に行われています。
+			</p>
+			<p>
+				<a href="about/members">メンバー一覧を見る</a>
+			</p>
+		</div>
+	</div>
 
-	{{< blocks/feature icon="fa-person-chalkboard" title="実務経験を積める" url="about/projects" >}}
-	OneScope ではソフトウェア企業の実際の仕事の一部を請け負うことが可能です。
-	仕事は OneScope 内でチームを組んで実施します。ソフトウェア企業のエンジニアがメンターとしてサポートします。
-	学校やプログラミングスクールでは体験する機会の少ない実務経験が可能です。
-	{{< /blocks/feature >}}
+	<div class="lp-feature-card">
+		<img src="images/get-experience.svg" />
+		<div>
+			<h4>実務経験を積める</h4>
+			<p>
+				OneScope ではソフトウェア企業から実務を請け負うことが可能です。  <br />
+				ソフトウェア企業のエンジニアや OneScope 内のエキスパートがメンターとしてサポートします。  <br />
+				学校やプログラミングスクールでは体験する機会の少ない実務経験が可能です。
+			</p>
+			<p>
+				<a href="about/projects">プロジェクト一覧を見る</a>
+			</p>
+		</div>
+	</div>
 
-	{{< blocks/feature icon="fa-house-laptop" title="リモートOK" url="https://discord.gg/Gt24ERbjRg" url_text="Discord サーバーに参加する" >}}
-	OneScope は主に Discord と GitHub 上でコミュニケーションを行います。
-	場所や時間帯によらず参加可能です。
-	{{< /blocks/feature >}}
-{{< /blocks/section >}}
-
-{{< blocks/section color="dark" >}}
+	<div class="lp-feature-card">
+		<img src="images/remote-work-ready.svg" />
+		<div>
+			<h4>リモートOK</h4>
+			<p>
+				OneScope は主に Discord と GitHub 上でコミュニケーションを行います。<br />
+				場所や時間帯によらず参加可能です。
+			</p>
+			<p>
+				<a href="https://discord.gg/Gt24ERbjRg">Discord サーバーに参加する</a>
+			</p>
+		</div>
+	</div>
+	
 	<div class="lp-timeline">
 		<iframe 
 			src="https://discord.com/widget?id=1105365490429337655&theme=dark" 
